BcmTVInput: Transfer detailed ScanInfo to settings app
refs #SWANDROID-1361

Change-Id: I8a3313d8f2ed30e62808f90bb281f303c2244b76

--- a/bcm_platform/app/BcmTVInput/res/values/strings.xml
+++ b/bcm_platform/app/BcmTVInput/res/values/strings.xml
@@ -15,7 +15,7 @@
 -->
 
 <resources>
-    <string name="app_name" translatable="false">Tuner-TVInput</string>
+    <string name="app_name" translatable="false">BcmTVInput Settings</string>
     <string name="tuner_service_label" translatable="false">Tuner service</string>
-    <string name="settings_button_label" translatable="false">Tuner-Settings</string>
+    <string name="scan_button_label" translatable="false">Scan</string>
 </resources>
