Use XML layout instead of hardcoded one.
No change in look and feel or functionality. It's essentialy
tha same layout but defined in XML rather than hardcoded in C++.

refs #SWANDROID-1693

Change-Id: I6147341995ec31f69cdb93236317a8fd46de2f05
Signed-off-by: Tomek Bury <tomek@broadcom.com>

--- a/bcm_platform/app/BcmTVInput/res/values/strings.xml
+++ b/bcm_platform/app/BcmTVInput/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="app_name" translatable="false">BcmTVInput Settings</string>
     <string name="tuner_service_label" translatable="false">Tuner service</string>
     <string name="scan_button_label" translatable="false">Scan</string>
+    <string name="stop_button_label" translatable="false">Stop</string>
+    <string name="streamer_mode_button_label" translatable="false">Streamer Mode</string>
 </resources>
