BcmTVInput: Rework stream clock capture
Clock is now acquired on startup (rather than tune) so settings app button
can set Android time from stream time.

Then it is only necessary to stop Live Channels, clear data, and Open to
get the guide presented.

refs #SWANDROID-1361

Change-Id: I0e0cffba97775e24068bbec9b4ef84095cb5555b

--- a/bcm_platform/app/BcmTVInput/res/values/strings.xml
+++ b/bcm_platform/app/BcmTVInput/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="tuner_service_label" translatable="false">Tuner service</string>
     <string name="scan_button_label" translatable="false">Start scan</string>
     <string name="stop_button_label" translatable="false">Stop scan</string>
-    <string name="streamer_mode_button_label" translatable="false">Streamer Mode</string>
+    <string name="set_clock_from_stream_button_label" translatable="false">Set Clock From Stream</string>
     <string name="scan_progress_label">Scan progress</string>
     <string name="signal_strength_label">Signal strength</string>
     <string name="signal_quality_label">Signal quality</string>
