adjust-screen: add a 'reset' button to ease testing.
refs #SWANDROID-2883

Change-Id: Ib82716969b8e6e0fe62b26184ce242ad1b9f7994
Signed-off-by: Pierre Couillaud <pierre@broadcom.com>

--- a/bcm_platform/app/BcmAdjustScreenOffset/res/values/strings.xml
+++ b/bcm_platform/app/BcmAdjustScreenOffset/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="xdec">x decrease</string>
     <string name="xinc">x increase</string>
     <string name="yinc">y increase</string>
+    <string name="reset">reset</string>
 
 </resources>
