SWANDROID-2465 UI added for configurable tuning parameters
Support is added for detecting the frontend tuner types (terrestiral or
satellite). For satellite frontend UI is added for configuring tuning
parameters for single frequncy scan or network scan. For terrestrial frontend
only network scan is supported.

Allow BcmTVInput app to handle the case when ANDROID_SUPPORTS_DTVKIT set to n.
For terrestrial FE box app will tune to hard coded tuning parameters.
Code cleanup with appropriate priority for debug logs.

refs #SWANDROID-2465

Change-Id: Ie921681e73c048662ab6c03757f587d52de7db14

--- a/apks/BcmTVInput/res/values/strings.xml
+++ b/apks/BcmTVInput/res/values/strings.xml
@@ -27,4 +27,30 @@
     <string name="tv_channels_label">TV: </string>
     <string name="radio_channels_label">Radio: </string>
     <string name="data_channels_label">Data: </string>
+
+
+    <string name="sat_tuning_param_string">TUNING PARAMETERS</string>
+    <string name="freq_string">Transponder Frequency</string>
+    <string name="Mhz_string">MHz</string>
+    <string name="enter_freq_hint">11627</string>
+    <string name="vert_pol_string">Vertical</string>
+    <string name="horiz_pol_string">Horizontal</string>
+    <string name="pol_string">Polarization</string>
+    <string name="symbol_rate_string">Symbol Rate</string>
+    <string name="symbol_sec_string">Sym/Sec</string>
+    <string name="enter_symbol_hint">22000</string>
+
+    <string name="satellite_mode_string">Satellite Mode</string>
+    <string name="dvbs2_string">DVB-S2</string>
+    <string name="dvbs_string">DVB-S</string>
+    <string name="next_string">NEXT</string>
+
+    <string name="modulation_string">Modulation</string>
+    <string name="mod_auto_string">AUTO</string>
+    <string name="mod_qpsk_string">QPSK</string>
+    <string name="mod_8psk_string">8PSK</string>
+
+    <string name="search_type_string">Search Type</string>
+    <string name="search_type_fta">FTA</string>
+    <string name="search_type_all">All</string>
 </resources>
