vendor: o-sync up 19.04.
Change-Id: Ief755b613105a30cd29d7068f05bed8f49179a41
Signed-off-by: Pierre Couillaud <pierre.couillaud@broadcom.com>

--- a/signing/README
+++ b/signing/README
@@ -21,4 +21,6 @@
 #
 # pem to der conversion is done using this: "openssl x509 -in verity.x509.pem -outform der -out verity.x509.der"
 #
+#
+# keystore password is "broadcom".
 
