custom: Combine BcmSplash with BcmCustomizer
When partner splash screen is displayed, the NETFLIX_KEY events should not
be broadcasted.  Combining the BcmSplashActivity into the BcmCustomizer
allows the events to be coordinated without worrying about LMK killing one
or the other process.

refs #SWANDROID-3973

Change-Id: I141e9d2d69c518cc6fe2bea300419720c0c3a529
Signed-off-by: Edwin Chan <edwin.chan@broadcom.com>

--- a/apks/BcmCustomizer/ext/res/values/strings.xml
+++ b/apks/BcmCustomizer/ext/res/values/strings.xml
@@ -3,6 +3,8 @@
 
     <string name="app_label">BcmCustomizer</string>
 
+    <string name="text_to_display">Starting up...</string>
+
     <string name="partner_row_title">Test Apps</string>
 
     <!-- Content description for Broadcom Test Apps -->
