--- a/apks/BcmCustomizer/base/res/values/strings.xml
+++ b/apks/BcmCustomizer/base/res/values/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_label">BcmCustomizer</string>
+    <string name="text_to_display">Starting up...</string>
 </resources>
